# YSNP.CLOUD

./: .gitignore  CMakeLists.txt  README.md
QtClientApp/: CMakeLists.txt
QtClientApp/include/: auth_window.h  mainwindow.h  reg_window.h  resourcePath.h  settings.h
QtClientApp/src/: auth_window.cpp  auth_window.ui  main.cpp  mainwindow.cpp  mainwindow.ui  reg_window.cpp  reg_window.ui  resourcePath.cpp  settings.cpp  settings.ui
project/App/: CMakeLists.txt
project/App/include/: App.h  AppExceptions.h  ClientConfig.h  Commands.h  CommandsExceptions.h  Worker.h
project/App/src/: App.cpp  ClientConfig.cpp  Commands.cpp  Worker.cpp
project/Client/: CMakeLists.txt
project/Client/Chunker/: CMakeLists.txt
project/Client/Chunker/include/: Chunker.h  File.h
project/Client/Chunker/src/: Chunker.cpp  File.cpp
project/Client/Chunker/tests/: CMakeLists.txt  main.cpp  test_Chunker.cpp
project/Client/Chunker/tests/include/: test.h
project/Client/Indexer/: CMakeLists.txt
project/Client/Indexer/include/: Indexer.h
project/Client/Indexer/src/: Indexer.cpp
project/Client/Watcher/: CMakeLists.txt
project/Client/Watcher/Apple/: CMakeLists.txt
project/Client/Watcher/Apple/include/: Watcher.h
project/Client/Watcher/Apple/src/: Watcher.cpp
project/Client/Watcher/Linux/: CMakeLists.txt
project/Client/Watcher/Linux/include/: FileSystemEvent.h  Notification.h  Watcher.h  WatcherExceptions.h
project/Client/Watcher/Linux/src/: FileSystemEvent.cpp  Watcher.cpp
project/Client/Watcher/Linux/tests/: CMakeLists.txt  test_Watcher.cpp
project/Client/Watcher/Linux/tests/include/: test.h
project/Client/Watcher/include/: WatcherInterface.h
project/DataBases/: CMakeLists.txt
project/DataBases/InternalDB/: CMakeLists.txt
project/DataBases/InternalDB/include/: InternalDB.h  InternalExceptions.h  SQLiteQuery.h  User.h
project/DataBases/InternalDB/src/: InternalDB.cpp
project/DataBases/MongoDB/: CMakeLists.txt
project/DataBases/MongoDB/include/: MongoDB.h  MongoExceptions.h
project/DataBases/MongoDB/src/: MongoDB.cpp
project/DataBases/PostgresDB/: CMakeLists.txt
project/DataBases/PostgresDB/Base/include/: PostgreSQLDB.h  PostgresExceptions.h
project/DataBases/PostgresDB/Base/src/: PostgreSQLDB.cpp
project/DataBases/PostgresDB/MetaDataDB/include/: MetaDataDB.h
project/DataBases/PostgresDB/MetaDataDB/src/: MetaDataDB.cpp
project/DataBases/PostgresDB/UserDB/include/: UsersDB.h
project/DataBases/PostgresDB/UserDB/src/: UsersDB.cpp
project/Network/: CMakeLists.txt
project/Network/Client/include/: ClientNetwork.h  ClientNetworkExceptions.h
project/Network/Client/src/: ClientNetwork.cpp
project/Network/Server/include/: ClientWorker.h  NetworkServer.h  SafeQueue.h  ServerNetworkExceptions.h  UserSession.h
project/Network/Server/src/: ClientWorker.cpp  NetworkServer.cpp  UserSession.cpp
project/Servers/: CMakeLists.txt
project/Servers/server/: CMakeLists.txt
project/Servers/server/include/: Command.h  CommandManager.h  Config.h  Server.h  Worker.h
project/Servers/server/src/: Config.cpp  Worker.cpp
project/Servers/storageServer/: CMakeLists.txt  config.json
project/Servers/storageServer/include/: StorageCommands.h  StorageExceptions.h  StorageManager.h  StorageServer.h
project/Servers/storageServer/src/: StorageCommands.cpp  StorageManager.cpp  StorageServer.cpp  main.cpp
project/Servers/syncServer/: CMakeLists.txt  config.json
project/Servers/syncServer/include/: SyncCommands.h  SyncExceptions.h  SyncManager.h  SyncServer.h
project/Servers/syncServer/src/: SyncCommands.cpp  SyncManager.cpp  SyncServer.cpp  main.cpp
project/utils/: CMakeLists.txt
project/utils/include/: SerializerAnswer.h  SerializerChunk.h  SerializerExceptions.h  SerializerFileInfo.h  SerializerInterface.h  SerializerUserChunk.h  SerializerUserDate.h  SerializerUserIds.h  SerializerUserInfo.h
project/utils/include/structs/: Answer.h  Chunk.h  ChunkMeta.h  CloudEvents.h  FileChunksMeta.h  FileInfo.h  FileMeta.h  UserChunk.h  UserDate.h  UserIds.h  UserInfo.h
project/utils/src/: SerializerAnswer.cpp  SerializerChunk.cpp  SerializerFileInfo.cpp  SerializerUserChunk.cpp  SerializerUserDate.cpp  SerializerUserIds.cpp  SerializerUserInfo.cpp
project/utils/test/: CMakeLists.txt
project/utils/test/include/: gtest_utils.h
project/utils/test/src/: main.cpp  tests_answer.cpp  tests_filemeta.cpp  tests_userdate.cpp
