CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
PROJECT(YSNP.Cloud)

SET(CMAKE_CXX_STANDARD 17)
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wpedantic")

#ENABLE_TESTING()
ADD_SUBDIRECTORY(project/Servers)
ADD_SUBDIRECTORY(project/Network)
ADD_SUBDIRECTORY(project/App)
ADD_SUBDIRECTORY(project/DataBases)
ADD_SUBDIRECTORY(project/Client)
ADD_SUBDIRECTORY(project/utils)
ADD_SUBDIRECTORY(QtClientApp)