CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
PROJECT(InternalDB)

SET(CMAKE_CXX_STANDARD 17)
#SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wpedantic")

FIND_PACKAGE(SQLite3)
INCLUDE_DIRECTORIES(${SQLite3_INCLUDE_DIRS})

FIND_PACKAGE(Boost COMPONENTS log REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

INCLUDE_DIRECTORIES(../../utils/include)

INCLUDE_DIRECTORIES(include)
ADD_LIBRARY(${PROJECT_NAME}-dev STATIC
        src/InternalDB.cpp
        )
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-dev ${SQLite3_LIBRARIES} ${Boost_LIBRARIES})

