CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
project(WatcherApple)

FIND_PACKAGE(Boost COMPONENTS log REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

INCLUDE_DIRECTORIES(include)
ADD_LIBRARY(${PROJECT_NAME}-dev STATIC
        src/Watcher.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-dev ${Boost_LIBRARIES})